Added find movie by id